Fixed Aurax percent not showing at low percents

--- a/priv/static/css/character/weapons.css
+++ b/priv/static/css/character/weapons.css
@@ -1,5 +1,6 @@
 .aurax-progress {
     background-color: #c29ffa !important;
+    overflow: visible;
 }
 
 .medal {
